--- a/src/index.css
+++ b/src/index.css
@@ -16,9 +16,9 @@ code {
 
 }
 
-.plugin svg{
-    width: 40px;
-}
+/*.plugin svg{*/
+/*    width: 40px;*/
+/*}*/
 
 /*@font-face {*/
 /*  font-family: "Averta CY";*/
