--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,9 @@ code {
     font-family: "Averta CY", Roboto, sans-serif;
 
 }
-
+body.plugin svg {
+    width:40px;
+}
 /*@font-face {*/
 /*  font-family: "Averta CY";*/
 /*  src: local('AvertaDemoPE-ExtraBold.otf');*/
