--- a/src/index.css
+++ b/src/index.css
@@ -36,12 +36,17 @@ code {
     overflow: visible !important;
     z-index: 10001;
 
-    @media (min-width: 992px) {
-        display:none;
-    }
+  
         
     
 
+}
+
+@media only screen and (min-width: 992px) {
+    .fb_dialog {
+        display:none;
+    }
+   
 }
 
 .fb_dialog_advanced {
