--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,16 @@ code {
 
 
 
+.fb_dialog {
+    position: fixed !important;
+    bottom: 23px !important;
+    right: 10px !important;
+    top: unset !important;
+    background: none !important;
+    transform: scale(0.7) !important;
+    overflow: visible !important;
 
+}
 
 @media only screen and (max-width: 992px) {
     .fb_dialog {
@@ -40,38 +49,6 @@ code {
     z-index: 10001;
     }
    
-}
-
-.fb_dialog_advanced {
-    border-radius: 8px;
-    padding: 10px;
-}
-
-.fb_reset {
-    background: none;
-    border: 0;
-    border-spacing: 0;
-    color: #000;
-    cursor: auto;
-    direction: ltr;
-    font-family: "lucida grande", tahoma, verdana, arial, sans-serif;
-    font-size: 11px;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: normal;
-    letter-spacing: normal;
-    line-height: 1;
-    margin: 0;
-    overflow: visible;
-    padding: 0;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0;
-    text-shadow: none;
-    text-transform: none;
-    visibility: visible;
-    white-space: normal;
-    word-spacing: normal;
 }
 
 
