--- a/src/index.css
+++ b/src/index.css
@@ -39,10 +39,13 @@ code {
         transition: all 0.5s ease-out 0s;
     transform: scale(0.6) !important;
     display: block !important;
+    position: fixed !important;
     bottom: 4px !important;
     right: -83px !important;
     left: 10px !important;
+    top: unset !important;
     background: rgba(82, 82, 82, .7);
+    overflow: visible !important;
     z-index: 10001;
     }
    
