--- a/src/index.css
+++ b/src/index.css
@@ -22,17 +22,17 @@ code {
 /*}*/
 
 
-/* 
+
 .fb_dialog {
-    position: fixed !important;
+    z-index: 10001;
+    position: fixed;
     bottom: 23px !important;
     right: 10px !important;
     top: unset !important;
-    background: none !important;
     transform: scale(0.7) !important;
     overflow: visible !important;
 
-} */
+}
 
 @media only screen and (max-width: 992px) {
     .fb_dialog {
