--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ code {
     top: unset !important;
     transform: scale(0.7) !important;
     overflow: visible !important;
-
+    background: none !important;
 }
 
 @media only screen and (max-width: 992px) {
