--- a/src/index.css
+++ b/src/index.css
@@ -22,16 +22,20 @@ code {
 /*}*/
 
 
+ @media only screen and (min-width:992px) {
+    .fb_dialog {
+        position: fixed !important;
+        bottom: 23px !important;
+        right: 10px !important;
+        top: unset !important;
+        background: none !important;
+        transform: scale(0.7) !important;
+        overflow: visible !important;
+        
+    
+    }
+ }
 
-.fb_dialog {
-    position: fixed !important;
-    bottom: 23px !important;
-    right: 10px !important;
-    top: unset !important;
-    transform: scale(0.7) !important;
-   
-
-}
 
 @media only screen and (max-width: 992px) {
     .fb_dialog {
