--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,11 @@ code {
 
 }
 
+svg {
+    width: 42px;
+    height: 42px;
+  }
+
 /*@font-face {*/
 /*  font-family: "Averta CY";*/
 /*  src: local('AvertaDemoPE-ExtraBold.otf');*/
